# Shapes-Generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Shapes-Generation.sln  Shapes-Generator.sln  version.txt
Shapes-Generation/: Cube.cpp  Cube.h  Hexagon.cpp  Hexagon.h  MeshStructs.h  Piramid.cpp  Piramid.h  Plane.cpp  Plane.h  Shape.h  Shapes-Generation.cpp  Shapes-Generation.vcxproj  Shapes-Generation.vcxproj.filters  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h
Shapes-Generator/: Cone.cpp  Cone.h  Config.hpp  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Hexagon.cpp  Hexagon.h  IcoSphere.cpp  IcoSphere.h  Plane.cpp  Plane.h  Plane.hpp  Pyramid.cpp  Pyramid.h  Pyramid.hpp  Shape.cpp  Shape.h  Shapes-Generator.vcxproj  Shapes-Generator.vcxproj.filters  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h  Torus.cpp  Torus.h  Torus.hpp  Vertex.h  main.cpp  pch.h  resource.hpp  system_functions.hpp  templates.h  version.h  version.hpp
calculations/: IcoSahedronCalculations.txt  IcoSahedronCalculationsTest.py  bitangentCalculation.py  coneCalculations.py  indexArrayFormater.py  jsonToCleanFormatedArray.py  mesh.json  tangentCalculation.py  usefullPatterns.txt  vertexArrayFormater.py
cmake/: CPM.cmake  get_cpm.cmake  global_settings.cmake  utils.cmake
res/: CMakeLists.txt  Shapes-Generator.rc  icon.icns
src/: CMakeLists.txt  CliApp.cpp  CliApp.hpp  Cone.cpp  Cone.hpp  Config.cpp  Config.hpp  ConsoleTemplates.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Hexagon.cpp  Hexagon.hpp  IcoSphere.cpp  IcoSphere.hpp  Plane.cpp  Plane.hpp  Pyramid.cpp  Pyramid.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Tetrahedron.cpp  Tetrahedron.hpp  Torus.cpp  Torus.hpp  TuiApp.cpp  TuiApp.hpp  Vertex.hpp  main.cpp  pch.hpp  templates.hpp  version.hpp
src/core/: BitMathOperators.hpp  CMakeLists.txt  Cone.cpp  Cone.hpp  Config.cpp  Config.hpp  Constants.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Hexagon.cpp  Hexagon.hpp  IcoSphere.cpp  IcoSphere.hpp  Plane.cpp  Plane.hpp  Pyramid.cpp  Pyramid.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  SystemFunctions.cpp  SystemFunctions.hpp  Tetrahedron.cpp  Tetrahedron.hpp  Torus.cpp  Torus.hpp  Vertex.hpp  pch.hpp
src/tui/: CMakeLists.txt  EditConfigView.cpp  EditConfigView.hpp  GenerateView.cpp  GenerateView.hpp  ParametersView.cpp  ParametersView.hpp  SaveFormatView.cpp  SaveFormatView.hpp  SaveResultView.cpp  SaveResultView.hpp  SaveView.cpp  SaveView.hpp  ShapeSelectView.cpp  ShapeSelectView.hpp  ShapesParametersViews.cpp  ShapesParametersViews.hpp  View.hpp  ViewHelpers.hpp  pch.hpp
src/utils/: CMakeLists.txt  Config.cpp  Config.hpp  StringHelpers.hpp  SystemFunctions.cpp  SystemFunctions.hpp  pch.hpp
tests/: CMakeLists.txt  ConeTest.cpp  CubeTest.cpp  CylinderTest.cpp  Helpers.hpp  HexagonTest.cpp  IcoSphereTest.cpp  PlaneTest.cpp  PyramidTest.cpp  SphereTest.cpp  Test.cpp  TetrahedronTest.cpp  TorusTest.cpp  pch.hpp
